Add logo thumbnail
This includes the missing logo background image to the thumbnails. Usually
the logo slide occurs when the meeting is defined as autoStartRecordng.

--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/icons';
+@import 'src/styles/images';
 @import 'src/styles/sizes';
 
 $thumbnail-height: calc((#{$bottom-content-height} / 10) * 6);
