--- a/src/styles/images.scss
+++ b/src/styles/images.scss
@@ -3,3 +3,9 @@
   background-position: center center;
   background-repeat: no-repeat;
 }
+
+.thumbnail {
+  .logo {
+    background-size: contain;
+  }
+}
