refactor(search): use functions and hooks

--- a/src/components/modals/search/index.scss
+++ b/src/components/modals/search/index.scss
@@ -4,6 +4,7 @@
 $result-height: $bottom-content-height;
 
 .search-body,
+.search-header,
 .search-footer {
   box-sizing: border-box;
   display: flex;
@@ -30,6 +31,32 @@ $result-height: $bottom-content-height;
     margin: $margin 0 0 0;
     position: relative;
     width: 100%;
+  }
+}
+
+.search-header {
+  flex-direction: column;
+  font-weight: var(--font-weight-regular);
+  padding: 0 0 $padding 0;
+
+  .title,
+  .subtitle {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+  }
+
+  .title {
+    font-size: larger;
+    overflow: hidden;
+    padding: 0 0 $padding-extra-small 0;
+    text-overflow: ellipsis;
+  }
+
+  .subtitle {
+    font-size: small;
+    padding: 0 $padding-small;
+    opacity: .75;
   }
 }
 
