feat(external-video): add played external videos to chat

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -51,6 +51,10 @@
   content: "\e927";
 }
 
+.icon-external_videos:before {
+  content: "\e930";
+}
+
 .icon-presentation:before {
   content: "\e90b";
 }
