feat(chat): system messages

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -15,11 +15,11 @@
 }
 
 
-.icon-arrow-left:before {
+.icon-arrowLeft:before {
   content: "\e90d";
 }
 
-.icon-arrow-right:before {
+.icon-arrowRight:before {
   content: "\e90a";
 }
 
@@ -39,6 +39,10 @@
   content: "\e912";
 }
 
+.icon-externalVideos:before {
+  content: "\e930";
+}
+
 .icon-fullscreen:before {
   content: "\e92a";
 }
@@ -49,10 +53,6 @@
 
 .icon-polls:before {
   content: "\e927";
-}
-
-.icon-external_videos:before {
-  content: "\e930";
 }
 
 .icon-presentation:before {
