--- a/src/components/chat/messages/system/index.scss
+++ b/src/components/chat/messages/system/index.scss
@@ -1,8 +1,8 @@
 @import 'src/styles/sizes';
 
-.external-video-wrapper {
-  background-color: var(--poll-wrapper-background-color);
-  border: $border-width-extra-small solid var(--poll-wrapper-color);
+.system-message-wrapper {
+  background-color: var(--system-message-wrapper-background-color);
+  border: $border-width-extra-small solid var(--system-message-wrapper-color);
   padding: $padding-small $padding-small $padding-small $padding-small;
 
   [dir="ltr"] & {
