feat(chat): avatar shape

--- a/src/components/chat/messages/index.scss
+++ b/src/components/chat/messages/index.scss
@@ -81,7 +81,6 @@
   }
 
   .interactive {
-    border-radius: 50%;
     display: flex;
     height: max-content;
     outline: none;
@@ -94,6 +93,10 @@
     &:hover {
       box-shadow: 0 0 0 $margin-small var(--box-shadow-color);
     }
+  }
+
+  .circle {
+    border-radius: 50%;
   }
 
   .inactive {
