feat(chat): default avatar color

--- a/src/components/utils/avatar/index.scss
+++ b/src/components/utils/avatar/index.scss
@@ -25,6 +25,10 @@ $avatar-size: 2.25rem;
     border-radius: 50%;
   }
 
+  .avatar-default {
+    background-color: var(--avatar-default-background-color);
+  }
+
   .avatar-zero {
     background-color: var(--avatar-zero-background-color);
   }
