--- a/src/components/chat/messages/index.scss
+++ b/src/components/chat/messages/index.scss
@@ -91,7 +91,7 @@
 
     &:focus,
     &:hover {
-      box-shadow: 0 0 0 $margin-small var(--box-shadow-color);
+      box-shadow: 0 0 0 $margin-extra-small var(--box-shadow-color);
     }
   }
 
