--- a/src/components/loader/index.scss
+++ b/src/components/loader/index.scss
@@ -19,7 +19,7 @@ $dots-wrapper-width: 100px;
 }
 
 .loader-bottom {
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: center;
 }
 
