refactor(external videos): rename external videos to videos

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -39,10 +39,6 @@
   content: "\e912";
 }
 
-.icon-externalVideos:before {
-  content: "\e930";
-}
-
 .icon-fullscreen:before {
   content: "\e92a";
 }
@@ -85,6 +81,10 @@
 
 .icon-users:before {
   content: "\e905";
+}
+
+.icon-videos:before {
+  content: "\e930";
 }
 
 .icon-webcams:before {
