refactor(icon): rename arrows

--- a/src/components/utils/icon/index.scss
+++ b/src/components/utils/icon/index.scss
@@ -9,11 +9,11 @@
   justify-content: center;
 }
 
-.icon-arrowLeft:before {
+.icon-left:before {
   content: "\e90d";
 }
 
-.icon-arrowRight:before {
+.icon-right:before {
   content: "\e90a";
 }
 
