--- a/src/components/presentation/index.scss
+++ b/src/components/presentation/index.scss
@@ -1,5 +1,9 @@
 $cursor-size: .5rem;
 
+:root {
+  --cursor-fill-color: var(--red);
+}
+
 .presentation-wrapper {
   align-items: center;
   bottom: 0;
