--- a/src/components/player/index.scss
+++ b/src/components/player/index.scss
@@ -23,7 +23,7 @@ $player-wrapper-padding: $control-bar-height;
     "application content"
     "bottom-bar content";
   grid-template-columns: 100% auto;
-  grid-template-rows: $top-bar-height auto auto $bottom-bar-height;
+  grid-template-rows: $top-bar-height auto 50% $bottom-bar-height;
   height: 100%;
   padding: 0 0 $player-wrapper-padding 0;
   width: 100%;
