style: default button color

--- a/src/components/utils/button/index.scss
+++ b/src/components/utils/button/index.scss
@@ -2,7 +2,7 @@
 
 :root {
   --button-default-background-color: transparent;
-  --button-default-color: var(--gray);
+  --button-default-color: var(--gray-dark);
 
   --button-disabled-background-color: var(--gray-light);
   --button-disabled-color: var(--white);
