Changes to fit the new parameter  into the playback phase.

--- a/src/components/utils/avatar/index.scss
+++ b/src/components/utils/avatar/index.scss
@@ -43,6 +43,10 @@ $avatar-size: 2rem;
     }
   }
 
+  .moderator-avatar {
+    border-radius: 5px;
+  }
+
   .circle {
     border-radius: 50%;
   }
