--- a/src/components/utils/icon/index.scss
+++ b/src/components/utils/icon/index.scss
@@ -84,3 +84,11 @@
 .icon-webcams:before {
   content: "\e930";
 }
+
+.icon-dark:before {
+  content: "\e9A0";
+}
+
+.icon-light:before {
+  content: "\e9A1";
+}
